fixed button links

--- a/style.css
+++ b/style.css
@@ -7,15 +7,11 @@
 .linkbox {
     border: #343a40 solid 2px;
     border-radius: 5px;
-    margin: 2px;
+    margin: 1px;
     background-color: #343a40;
-        
-}
-
-.social_link {
     color: white;
     text-decoration: none;
-
+    width: 100%;
 }
 
 .textbox {
