--- a/style.css
+++ b/style.css
@@ -25,10 +25,22 @@
     padding: 5px;
 }
 
-.project-box {
-    border:  #343a40 2px solid; 
+.project-container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: #d0d5db;
+    border:  #707070 2px solid;
+    border-radius: 5px;
 }
 
+
+
 footer {
+    padding-top: 10px;
+    margin-top: 10px;
     width: 100%;
 }
